Добавить функционал согласно ФЗ9.